--- a/latihanjs1.html
+++ b/latihanjs1.html
@@ -20,7 +20,7 @@
     document.write("<hr/>");
     document.write("<br>Nama Mahasiswa : " + nama);
     document.write("<br>Pekerjaan : " + pekerjaan);
-    document.write("<br>Umur : " + umur);
-    document.write("<br>Berat Badan : " + beratbadan);
+    document.write("<br>Umur : " + umur + "Tahun");
+    document.write("<br>Berat Badan : " + beratbadan + "Kg");
   </script>
 </html>
