--- a/latihanjs6.html
+++ b/latihanjs6.html
@@ -2,7 +2,7 @@
     //ada pelanggan membeli barang elektronik
     //barang barangnya misal ada TV=> 3 juta, Motor => 12 juta, kulkas => 4 juta 
     //tentukan pembelian barangnya apa dan berapa yang beli
-    let pelanggan = "Arip";
+    let pelanggan = "Bhatito";
     let produk = "TV";
     //struktu kendali 
     if (produk == 'TV'){
