--- a/latihan15js.html
+++ b/latihan15js.html
@@ -30,6 +30,6 @@
     </table>
     </form>
     <p id="hasil"></p>
-    <script src="js/skrip.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
