--- a/latihan16js.html
+++ b/latihan16js.html
@@ -7,19 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-
-    
+    <table style="width: 50%;background-color: aqua; border: solid; text-align: center;" border="">
     <form id="kalkulator">
-    Angka 1 :
+    <td> Angka 1 :
     <input type="text" name="angka" placeholder="masukan angka pertama"><br>
+    </td>
+    <td>
     Angka 2 :
     <input type="text" name="angka2" placeholder="masukan angka kedua"><br>
+    </td>
+    <td>
     Hasil : 
     <input type="text" name="hasil" value="" disabled> <br>
-
-    <button type="button" name="btn_tambah" onclick="tambah()">+</button>
-    <button type="button" name="btn_tambah" onclick="kurang()">-</button>
+</td>
+<td>
+    <button type="button" name="btn_tambah" onclick="tambah()">+</button><br>
+    <button type="button" name="btn_kurang" onclick="kurang()">-</button><br>
+    <button type="button" name="btn_bagi" onclick="pembagian()">/</button><br>
+    <button type="button" name="btn_kali" onclick="kali()">x</button><br>
+</td>
 </form>
+</table>
     <script src="js/kalkulator.js">
 
     </script>
