--- a/latihan15js.html
+++ b/latihan15js.html
@@ -7,6 +7,7 @@
     <title>Latihan JavaScript Eksternal</title>
 </head>
 <body>
+    <center>
     <form id="frm">
         <table style="width: 50%;background-color: aqua; border: solid; text-align: center;" border="1">
             <tr>
@@ -29,7 +30,11 @@
          </tr>
     </table>
     </form>
-    <p id="hasil"></p>
-    <script src="js/script.js"></script>
-</body>
+    <!-- 1. Lengkapilah form dari latihan 15js menggunakan CSS dan table 
+        2. Perbagus tampilannya -->
+        <!-- <p id="hasil"></p> -->
+        <table id="hasil" style="width: 50%;background-color: aqua; border: solid; text-align: center;" border="1"></table>
+    </center>
+        <script src="js/script.js"></script>
+    </body>
 </html>
