--- a/latihan16js.html
+++ b/latihan16js.html
@@ -4,22 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tugas Kalkulator</title>
 </head>
 <body>
-
-    
-    <form id="kalkulator">
-    Angka 1 :
-    <input type="text" name="angka" placeholder="masukan angka pertama"><br>
+    <center>
+    <form id="kalkulator"  >
+    <table style="width: 50%;background-color: blue; border: solid; text-align: center;" border="">
+        <tr>
+            <td><strong>kalkulator</strong></td>
+        </tr>
+    <td> Angka 1 :
+    <input type="text" name="angka" placeholder="masukan angka pertama" id="angka"><br>
+    </td>
+    <td>
     Angka 2 :
-    <input type="text" name="angka2" placeholder="masukan angka kedua"><br>
+    <input type="text" name="angka2" placeholder="masukan angka kedua" id="angka2"><br>
+    </td>
+    <td>
     Hasil : 
     <input type="text" name="hasil" value="" disabled> <br>
-
-    <button type="button" name="btn_tambah" onclick="tambah()">+</button>
-    <button type="button" name="btn_tambah" onclick="kurang()">-</button>
+</td>
+<td>
+    <button type="button" name="btn_tambah" onclick="tambah()">+</button><br>
+    <button type="button" name="btn_kurang" onclick="kurang()">-</button><br>
+    <button type="button" name="btn_bagi" onclick="pembagian()">/</button><br>
+    <button type="button" name="btn_kali" onclick="kali()">x</button><br>
+</td>
+</table>
 </form>
+</center>
     <script src="js/kalkulator.js">
 
     </script>
