tugas pertemuan 4 file latihan 15 & 16 dan folder js

--- a/latihan16js.html
+++ b/latihan16js.html
@@ -29,6 +29,7 @@
     <button type="button" name="btn_kurang" onclick="kurang()">-</button><br>
     <button type="button" name="btn_bagi" onclick="pembagian()">/</button><br>
     <button type="button" name="btn_kali" onclick="kali()">x</button><br>
+    <button type="button" name="btn_pangkat" onclick="pangkat()">^</button><br> 
 </td>
 </table>
 </form>
