--- a/tugasjquery.html
+++ b/tugasjquery.html
@@ -8,52 +8,46 @@
     <title>tugas pertemuan 6</title>
     <script src="js\jquery.js"></script>
 </head>
-<style>
-    #box {
-        width: 300px;
-        height: 80px;
-        background-color: pink;
-        border: 2px solid black;
-    }
-</style>
+
 </head>
 
 <body>
-    <button id="tombol_hide">Hide</button>
-    <button id="tombol_show">Show</button>
-    <br>
-    <br>
-    <table id="gambar" class="display" style="width:25% ">
-        <thead>
-            <tr style="background-color: aqua;">
-                <th>gambar</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><img src="img\1.PNG" style="height: 200px;"></td>
-            </tr>
-            <tr>
-                <td><img src="img\2.PNG" style="height: 200px;"></td>
-            </tr>
-            <tr>
-                <td><img src="img\asdasdasdasddaa.PNG" style="height: 200px;"></td>
-            </tr>
-        </tbody>
-
-    </table>
+    
+        <div id="clickme">
+            <h2 id="tulisan1">Gambar 1</h2>
+            <img id="book" src="img\1.PNG" alt="" height="200">
+        </div>
+        <div id="clickme1" class="col-12">
+            <h2 id="tulisan2">Gambar 2</h2>
+            <img id="book1" src="img\2.PNG" alt="" height="200">
+        </div>
+        <div id="clickme2">
+            <h2 id="tulisan3">Gambar 3</h2>
+            <img id="book2" src="img\asdasdasdasddaa.PNG" alt="" height="200">
+        </div>
+ 
 </body>
 <script>
-    $(document).ready(function () {
-
-        $("#tombol_hide").click(function () {
-            $("#gambar").hide();
-        })
-
-        $("#tombol_show").click(function () {
-            $("#gambar").show();
-        })
-
+    $("#clickme").click(function () {
+        $("#tulisan1").hide("slow", function () {
+        });
+        $("#book").hide("slow", function () {
+            alert("Gambar Telah Di Hide.");
+        });
+    });
+    $("#clickme1").click(function () {
+        $("#tulisan2").hide("slow", function () {
+        });
+        $("#book1").hide("slow", function () {
+            alert("Gambar Telah Di Hide.");
+        });
+    });
+    $("#clickme2").click(function () {
+        $("#tulisan3").hide("slow", function () {
+        });
+        $("#book2").hide("slow", function () {
+            alert("Gambar Telah Di Hide.");
+        });
     });
 </script>
 
